--- a/build.gradle
+++ b/build.gradle
@@ -2,13 +2,17 @@
 
 buildscript {
     
+    ext {
+        kotlin_version = '1.4.10'
+    }
     repositories {
         google()
         jcenter()
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:3.4.2'
-        
+        classpath 'com.android.tools.build:gradle:4.0.1'
+        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
+
 
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
@@ -27,8 +31,9 @@ task clean(type: Delete) {
 }
 
 ext {
-    roomVersion = '2.2.0'
-    archLifecycleVersion = '2.2.0-beta01'
+    roomVersion = '2.2.5'
+    archLifecycleVersion = '2.2.0'
     coreTestingVersion = '2.1.0'
-    materialVersion = '1.0.0'
+    materialVersion = '1.2.0'
+    coroutines = '1.3.7'
 }
